--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
     "rootDir": "./src",
     "strict": true,
     "esModuleInterop": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
