--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,10 @@ services:
     build: .
     ports:
       - "3000:3000"
+      - "9229:9229"  # Debug port
     environment:
       - NODE_ENV=development
     volumes:
       - .:/app
       - /app/node_modules
-    command: npm run dev
+    command: npm run dev:debug
