--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "reflect-metadata": "^0.2.2",
     "tsyringe": "^4.10.0"
   },
   "devDependencies": {
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.0",
     "nodemon": "^2.0.22",
