--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node dist/index.js",
     "dev": "nodemon --exec ts-node src/index.ts",
     "dev:debug": "nodemon --exec ts-node --inspect=0.0.0.0:9229 src/index.ts",
-    "test": "ts-node tests/test.ts"
+    "test": "ts-node tests/test.ts && ts-node tests/rateLimiter.test.ts"
   },
   "keywords": [],
   "author": "",
